# PADT

./: .gitignore  CMakeLists.txt  CMakePresets.json  LICENSE  README.md
.github/workflows/: unit-tests.yml
examples/: main.cpp
include/: weights.hpp
src/: weights.cpp
test/: mil_std_3013b_std_day.csv  weights_test.cpp
